# manga-text-yolo

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
data/: DATASET_README.md
scripts/: benchmark.py  benchmark_comparison.py  build_tensorrt.py  combined_inference.py  compare_models.py  evaluate_teacher.py  evaluate_vs_gt.py  export.py  fast_annotations.py  generate_block_annotations.py  generate_comparison.py  generate_ensemble_annotations.py  generate_line_annotations.py  generate_sample_annotation.py  inference.py  merge_datasets.py  optimize_onnx.py  prepare_animetext.py  quantize.py  test_generation.py  train.py  train_phase3_ensemble.sh  train_yolo_blocks.py  validate.py  verify_pipeline_outputs.py  visualize_comparison.py  visualize_trained.py
src/: __init__.py
src/data/: __init__.py  dataset.py
src/inference/: __init__.py  async_pipeline.py  compiled_model.py  cuda_graphs.py  detector.py  output_cache.py  tensorrt_backend.py
src/models/: __init__.py  backbone.py  detector.py  heads.py
src/training/: __init__.py  losses.py  trainer.py
src/utils/: __init__.py  textblock.py
thoughts/handoffs/: block-detection-v5-training.md  teacher-model-training.md  yolo26_migration_handoff.md
thoughts/handoffs/validation-output/: IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.txt  TECHNICAL_DETAILS.md  VALIDATION_REPORT.md
thoughts/shared/handoffs/general/: 2026-01-16_08-23_yolo26-migration.yaml  2026-01-19_04-37_training-complete-post-processing-needed.yaml  2026-01-19_05-17_yolo26-inference-fixed-comparison-done.yaml  2026-01-19_05-55_training-fixes-hybrid-unified.yaml  2026-01-19_07-07_unified-training-complete.yaml
thoughts/shared/research/: 2026-01-19_training-architecture-analysis.md
utils/: __init__.py  io_utils.py
